Update component ui/main.reel/

--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -27,7 +27,7 @@
             "prototype": "digit/ui/button.reel",
             "properties": {
                 "enabled": true,
-                "label": "Button"
+                "label": "Neuer Eintrag"
             },
             "listeners": [
                 {
