--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -26,7 +26,9 @@
         "button": {
             "prototype": "digit/ui/button.reel",
             "properties": {
+                "active": true,
                 "enabled": true,
+                "holdThreshold": "0",
                 "label": "Neuer Eintrag"
             },
             "listeners": [
