--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -26,7 +26,7 @@
         "button": {
             "prototype": "digit/ui/button.reel",
             "properties": {
-                "active": true,
+                "active": false,
                 "enabled": true,
                 "holdThreshold": "0",
                 "label": "Neuer Eintrag"
@@ -38,56 +38,6 @@
                 }
             ]
         },
-        "flow": {
-            "prototype": "montage/ui/flow.reel",
-            "properties": {
-                "cameraPosition": [
-                    0,
-                    0,
-                    1500
-                ],
-                "paths": [
-                    {
-                        "knots": [
-                            {
-                                "knotPosition": [
-                                    -2400,
-                                    0,
-                                    -1
-                                ],
-                                "nextHandlerPosition": [
-                                    -800,
-                                    0,
-                                    -1
-                                ],
-                                "previousDensity": 10,
-                                "nextDensity": 10
-                            },
-                            {
-                                "knotPosition": [
-                                    2400,
-                                    0,
-                                    -1
-                                ],
-                                "previousHandlerPosition": [
-                                    800,
-                                    0,
-                                    -1
-                                ],
-                                "previousDensity": 10,
-                                "nextDensity": 10
-                            }
-                        ],
-                        "headOffset": 0,
-                        "tailOffset": 0,
-                        "units": {}
-                    }
-                ]
-            },
-            "_dev": {
-                "isHidden": true
-            }
-        },
         "list": {
             "prototype": "digit/ui/list.reel",
             "properties": {
@@ -97,16 +47,6 @@
         },
         "rangeController": {
             "prototype": "montage/core/range-controller"
-        },
-        "title": {
-            "prototype": "digit/ui/title.reel",
-            "properties": {
-                "element": {"#": "title"},
-                "value": "Der gesunde Hund"
-            },
-            "_dev": {
-                "isHidden": true
-            }
         }
     }
     </script>
