--- a/ui/topic.reel/topic.html
+++ b/ui/topic.reel/topic.html
@@ -9,12 +9,46 @@
             "properties": {
                 "element": {"#": "owner"}
             }
+        },
+        "checkbox": {
+            "prototype": "digit/ui/checkbox.reel",
+            "properties": {
+                "element": {"#": "checkbox"},
+                "checked": true
+            },
+            "bindings": {
+                "checked": {"<->": "@owner.topic.publish"}
+            }
+        },
+        "textArea": {
+            "prototype": "digit/ui/text-area.reel",
+            "properties": {
+                "element": {"#": "textArea"},
+                "value": "Text"
+            }
+        },
+        "textField": {
+            "prototype": "digit/ui/text-field.reel",
+            "properties": {
+                "element": {"#": "textField"},
+                "placeholderValue": "Text"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.topic.title"}
+            }
         }
     }
     </script>
 </head>
 <body>
     <div data-montage-id="owner" class="Topic">
+        <input type="checkbox" data-montage-id="checkbox">
+
+        </input>
+        <input data-montage-id="textField" type="text">
+
+        </input>
+        <textarea data-montage-id="textArea"></textarea>
     </div>
 </body>
 </html>
