Update component ui/topic.reel/

--- a/ui/topic.reel/topic.html
+++ b/ui/topic.reel/topic.html
@@ -25,6 +25,9 @@
             "properties": {
                 "element": {"#": "textArea"},
                 "value": "Text"
+            },
+            "bindings": {
+                "value": {"<->": "@owner.topic.content"}
             }
         },
         "textField": {
