--- a/ui/main.reel/main.html
+++ b/ui/main.reel/main.html
@@ -31,6 +31,9 @@
                 "holdThreshold": "0",
                 "label": "Neuer Eintrag"
             },
+            "_dev": {
+                "isHidden": true
+            },
             "listeners": [
                 {
                     "type": "action",
@@ -47,6 +50,15 @@
         },
         "rangeController": {
             "prototype": "montage/core/range-controller"
+        },
+        "topic1": {
+            "prototype": "ui/topic.reel",
+            "properties": {
+                "element": {"#": "topic1"}
+            },
+            "bindings": {
+                "topic": {"<-": "@list:iteration.object"}
+            }
         }
     }
     </script>
@@ -58,7 +70,7 @@
         </h1>
         <button data-montage-id="button"></button>
         <ul data-montage-id="list">
-            <li></li>
+            <li data-montage-id="topic1"></li>
         </ul>
     </div>
 </body>
